--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -10,7 +10,7 @@
     <div class="container bg-white-container col-md-4 center">
         <form action="#" method="POST" class="col-md-12">
           <h2>Sign in</h2>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name">
               </div>
