--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -4,6 +4,11 @@ html, body {
     margin: 0;
 }
 
+.big-avatar {
+    width: 20%;
+    clip-path: circle(50% at 50% 30%);
+}
+
 .center-screen {
     width: 100%;
     height: 90%;
