--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,8 +51,16 @@
       </div>
     </nav>
     <!-- NAVBAR -->
-
-
+    <div class="container mt-3" style="z-index: 1;">
+      {% for message in get_flashed_messages() %}
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endfor %}
+    </div>
 
     {%- block content -%}
     {%- endblock content -%}
