--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -12,25 +12,25 @@
           <h2>Sign in</h2>
             <div class="form-group mt-3">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name">
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="name" required>
               </div>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" aria-describedby="username">
+                <input type="text" class="form-control" id="username" aria-describedby="username" name="username" required>
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password" name="password" required>
               </div>
               <div class="form-group">
                 <label for="repeat-password">Confirm Password</label>
-                <input type="password" class="form-control " id="repeat-password">
+                <input type="password" class="form-control " id="repeat-password" name="conf_password" required>
               </div>
               <hr>
               <div class="form-group">
-                <input type="email" class="form-control" id="coupon" placeholder="Enter invitation code" required>
+                <input type="text" class="form-control" id="coupon" placeholder="Enter invitation code" name="code" required>
               </div>
-              <button type="submit" class="btn btn-secondary btn-block mb-3">Let's hate each other</button>
+              <button type="submit" class="btn btn-secondary btn-block mb-3">Let's Hatte each other</button>
         </form>
     </div>
   </div>
