--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {%- block title -%}
-        &ThinSpace; {{ user | capitalize }}    
+        &ThinSpace; {{ username | capitalize }}    
 {%- endblock title -%}
 
 
@@ -11,7 +11,7 @@
             <div class="mt-3 col-3">
                 <img src="{{ url_for('static', filename='noun_User_3401294.svg') }}" class="big-avatar" alt="User Avatar">
                 <div>
-                    <h3>{{ user | capitalize }}</h3>
+                    <h3>{{ username | capitalize }}</h3>
                     <p class="text-muted">Put a bio here...</p>
                         <button type="button" class="btn btn-secondary btn-sm">
                         Hatters <span class="badge badge-light">4</span>
