Login and Signin w/ invitation code done!

--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="center-screen">
     <div class="container bg-white-container col-md-4 center">
-        <form action="#" method="POST" class="col-md-12">
+        <form action="" method="POST" class="col-md-12">
           <h2>Sign in</h2>
             <div class="form-group mt-3">
                 <label for="name">Name</label>
