--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,15 +4,34 @@
         &ThinSpace; {{ username | capitalize }}    
 {%- endblock title -%}
 
+{% block navbar_settings %}
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Settings
+        </a>
+        <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">My Account</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Log Out</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+{% endblock navbar_settings %}
 
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="mt-3 col-3">
-                <img src="{{ url_for('static', filename='noun_User_3401294.svg') }}" class="big-avatar" alt="User Avatar">
+                <img src="{{ avatar_url }}" class="big-avatar" alt="User Avatar">
                 <div>
-                    <h3>{{ username | capitalize }}</h3>
-                    <p class="text-muted">Put a bio here...</p>
+                    <h3>{{ name | capitalize }}</h3>
+                    <p class="text-muted">{{ bio }}</p>
                         <button type="button" class="btn btn-secondary btn-sm">
                         Hatters <span class="badge badge-light">4</span>
                         </button>
