--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "macros.html" as macros %}
 
 {%- block title -%}
         &ThinSpace; {{ username | capitalize }}    
@@ -15,9 +16,9 @@
           Settings
         </a>
         <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">My Account</a>
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalAccount">My Account</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Log Out</a>
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalLogout">Log Out</a>
         </div>
       </li>
     </ul>
@@ -25,6 +26,25 @@
 {% endblock navbar_settings %}
 
 {% block content %}
+  {% call macros.render_modal("My Account","modalAccount" ,"" ,"Save changes", "secondary") %}
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" name="name" id="name" value="{{ name }}">
+      </div>
+      <div class="form-group">
+        <label for="bio">Bio</label>
+        <textarea class="form-control" name="bio" id="bio" rows="4" cols="50">{{ bio }}</textarea>
+      </div>
+      <div class="form-group">
+        <label for="avatar_url">Pic</label>
+        <input type="url" class="form-control" name="avatar_url" id="avatar_url" value="{{ avatar_url }}">
+      </div>
+  {% endcall %}
+
+  {% call macros.render_modal("Log Out","modalLogout", "/", "Log Out", "danger") %}
+      <p>Are you sure you want to log out?</p>
+  {% endcall %}
+
     <div class="container">
         <div class="row">
             <div class="mt-3 col-3">
