--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -22,7 +22,7 @@
   </div>
 {%- endmacro -%}
 
-{%- macro render_card_sm(username, bio, avatar_url) -%}
+{%- macro render_card_sm(name, bio, avatar_url, id) -%}
   <div class="card bg-white-container mt-3">
     <div class="card-body">
       <div class="row">
@@ -30,12 +30,11 @@
           <img src="{{ avatar_url }}" class="small-avatar" alt="User Avatar">
         </div>
         <div class="col">
-          <h5 class="card-title">{{ username }}</h5>
+          <h5 class="card-title">{{ name }}</h5>
           <p class="card-text">{{ bio }}</p>
           <div class="row hatte-footer">
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             <form action="#" method="POST">
-              <button type="button" class="btn btn-outline-danger btn-sm">Wanna Hatte you!</button>
+              <button type="submit" class="btn btn-outline-danger btn-sm" value="{{ id }}" name="follow">Wanna Hatte you!</button>
             </form>
           </div>
         </div>
