--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -43,7 +43,7 @@
   </div>
 {%- endmacro -%}
 
-{%- macro render_card_big(username, message, avatar_url, created, pic) -%}
+{%- macro render_card_big(username, message, avatar_url, created, pic, id) -%}
 <div class="card bg-white-container mt-3">
   <div class="card-body">
     <div class="row">
@@ -59,7 +59,7 @@
         <div class="row hatte-footer">
           <p class="card-text"><small class="text-muted">{{ created }}</small></p>
           <form action="#" method="POST">
-            <button type="button" class="btn btn-outline-danger btn-sm">UnHatte</button>
+            <button type="submit" class="btn btn-outline-danger btn-sm" name="unhatte" value={{ id }}>UnHatte</button>
           </form>
         </div>
       </div>
