Responsive design, see own messages feature done. Ready to deploy!

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -57,3 +57,8 @@ html, body {
     align-items: center;
     justify-content: center;
 }
+
+#linkProfile:link, :visited {
+    color: black;
+    text-decoration: underline;
+}
