--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,9 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{{ url_for('main.index') }}">HATtEr</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       {% block navbar_settings %}{% endblock navbar_settings %}
     </nav>
     <!--NAVBAR -->
