--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -43,7 +43,7 @@
   </div>
 {%- endmacro -%}
 
-{%- macro render_card_big(username, message, avatar_url, created, pic, id) -%}
+{%- macro render_card_big(username, message, avatar_url, created, pic, id, hidden) -%}
 <div class="card bg-white-container mt-3">
   <div class="card-body">
     <div class="row">
@@ -58,12 +58,30 @@
         {% endif %}
         <div class="row hatte-footer">
           <p class="card-text"><small class="text-muted">{{ created }}</small></p>
-          <form action="#" method="POST">
+          <form action="#" method="POST" {{ hidden }}>
             <button type="submit" class="btn btn-outline-danger btn-sm" name="unhatte" value={{ id }}>UnHatte</button>
           </form>
         </div>
       </div>
     </div>
   </div>
+</div>
+{%- endmacro -%}
+
+{%- macro navbar() -%}
+
+<div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+  <ul class="navbar-nav">
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Settings
+      </a>
+      <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalAccount">My Account</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalLogout">Log Out</a>
+      </div>
+    </li>
+  </ul>
 </div>
 {%- endmacro -%}
