--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,23 +6,7 @@
 {%- endblock title -%}
 
 {% block navbar_settings %}
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Settings
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalAccount">My Account</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalLogout">Log Out</a>
-        </div>
-      </li>
-    </ul>
-  </div>
+  {{ macros.navbar() }}
 {% endblock navbar_settings %}
 
 {% block content %}
@@ -56,26 +40,28 @@
       <p>Are you sure you want to log out?</p>
   {% endcall %}
 
-    <div class="container">
+    <div class="container-md">
         <div class="row">
-            <div class="mt-3 col-3">
+            <div class="mt-3 col-lg-3">
                 <img src="{{ avatar_url }}" class="big-avatar" alt="User Avatar">
                 <div>
-                    <h3>{{ name }}</h3>
+                    <a id="linkProfile" href="{{ url_for('main.timeline', username=username) }}"><h3>{{ name }}</h3></a>
                     <p class="text-muted">{{ bio }}</p>
-                        <button type="button" class="btn btn-secondary btn-sm">
-                        Hatters <span class="badge badge-light">{{ no_followers }}</span>
-                        </button>
-                        <button type="button" class="btn btn-secondary btn-sm">
-                        Hatted <span class="badge badge-light">{{ no_followeds }}</span>
-                        </button>
+                    <div class="d-flex justify-content-around">
+                      <button type="button" class="btn btn-secondary btn-sm">
+                          Hatters <span class="badge badge-light">{{ no_followers }}</span>
+                      </button>
+                      <button type="button" class="btn btn-secondary btn-sm">
+                          Hatted <span class="badge badge-light">{{ no_followeds }}</span>
+                      </button>
+                  </div>
                     <button class="btn btn-dark btn-block mt-3" data-toggle="modal" data-target="#modalHatte">
                         <i class="fas fa-hand-middle-finger"></i>
                         Spread Hatte!
                     </button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
                 <h3 class="mt-3">Just the Hatte</h3>
                 {% if status_msg %}
                   {% for f_user in users_list %}
@@ -91,7 +77,7 @@
                 {% endif %}
                
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
               <h4 class="mt-3">New People</h4>
               {% for user in other_users | reverse %}
                 {% if user.username != username %} 
