Added favicon, confirm password (js) and date since post hatte (js)

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,7 @@
     <div class="container bg-white-container col-md-3 center">
         <form action="" method="POST" class="col-md-10">
             <h1 class="mb-3 text-center">HATtEr</h1>
+            <p class="text-center text-muted"><small>Just like Twitter, but you don't have to pretendent 😬</small></p>
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" name="username" aria-describedby="username">
