--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -81,3 +81,9 @@
     </div>
 </div>
 {%- endblock content -%}
+
+{% block script %}
+  <script>
+    get_since("date-db");
+  </script>
+{% endblock script %}
