--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -57,7 +57,8 @@
           <img src="{{ pic }}" class="card-img-top" alt="...">
         {% endif %}
         <div class="row hatte-footer">
-          <p class="card-text"><small class="text-muted">{{ created }}</small></p>
+          <p class="card-text"><small id="date-db" class="text-muted">{{ created }}</small></p>
+          <span id="since"></span>
           <form action="#" method="POST" {{ hidden }}>
             <button type="submit" class="btn btn-outline-danger btn-sm" name="unhatte" value={{ id }}>UnHatte</button>
           </form>
