--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -20,19 +20,38 @@
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" onkeyup="check();" required>
               </div>
               <div class="form-group">
                 <label for="repeat-password">Confirm Password</label>
-                <input type="password" class="form-control " id="repeat-password" name="conf_password" required>
+                <input type="password" class="form-control " id="repeat-password" name="conf_password" onkeyup="check();" required>
+                <span id="confirm"></span>
               </div>
               <hr>
               <div class="form-group">
                 <input type="text" class="form-control" id="coupon" placeholder="Enter invitation code" name="code" required>
               </div>
-              <button type="submit" class="btn btn-secondary btn-block mb-3">Let's Hatte each other</button>
+              <button type="submit" id="submit-btn" class="btn btn-secondary btn-block mb-3">Let's Hatte each other</button>
         </form>
     </div>
   </div>
 
 {% endblock content %}
+
+{% block script %}
+<script>
+  var pass1 = document.getElementById("password")
+  var pass2 = document.getElementById("repeat-password")
+  var check = function() {
+      if (pass1.value == pass2.value){
+        document.getElementById("repeat-password").style.backgroundColor="rgb(167, 255, 167)";
+        document.getElementById("confirm").innerHTML="👍🏼";
+        document.getElementById("submit-btn").disabled = false;
+      }else{
+        document.getElementById("repeat-password").style.backgroundColor="rgb(245, 166, 166)";
+        document.getElementById("confirm").innerHTML="⛔";
+        document.getElementById("submit-btn").disabled = true;
+      }
+    }
+</script>
+{% endblock script %}
