--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -88,3 +88,9 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block script %}
+  <script>
+    get_since("date-db");
+  </script>
+{% endblock script %}
